--- a/src/Ibw/JobeetBundle/Resources/views/Job/show.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/Job/show.html.twig
@@ -1,6 +1,8 @@
-{% extends '::base.html.twig' %}
+{% extends 'IbwJobeetBundle::layout.html.twig' %}
 
-{% block body -%}
+{% block content %}
+
+    {% block body -%}
     <h1>Job</h1>
 
     <table class="record_properties">
@@ -85,4 +87,6 @@
     </li>
     <li>{{ form(delete_form) }}</li>
 </ul>
+{% endblock %}
+
 {% endblock %}
