--- a/src/Ibw/JobeetBundle/Resources/views/Job/index.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/Job/index.html.twig
@@ -1,5 +1,10 @@
 {% extends 'IbwJobeetBundle::layout.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('bundles/ibwjobeet/css/jobs.css') }}" type="text/css" media="all" />
+{% endblock %}
+
 {% block content %}
 
     {% block body -%}
