--- a/src/Ibw/JobeetBundle/Resources/views/Job/edit.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/Job/edit.html.twig
@@ -21,7 +21,7 @@
 
 {% block content %}
     <h1>Job edit</h1>
-<form action="{{ path('ibw_job_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+<form action="{{ path('ibw_job_update', {'token': entity.token}) }}" method="post" {{ form_enctype(edit_form) }}>
     <table id="job_form">
         <tfoot>
         <tr>
@@ -94,13 +94,15 @@
                 {{ form_widget(edit_form.how_to_apply) }}
             </td>
         </tr>
+        <!-- ... -->
         <tr>
             <th>{{ form_label(edit_form.token) }}</th>
             <td>
                 {{ form_errors(edit_form.token) }}
-                {{ form_widget(edit_form.token) }}
+                {{ form(edit_form.token) }}
             </td>
         </tr>
+        <!-- ... -->
         <tr>
             <th>{{ form_label(edit_form.is_public) }}</th>
             <td>
