--- a/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
+++ b/src/Ibw/JobeetBundle/Resources/views/layout.html.twig
@@ -6,6 +6,9 @@
             Jobeet - Your best job board
         {% endblock %}
     </title>
+
+    <link rel="alternate" type="application/atom+xml" title="Latest Jobs" href="{{ url('ibw_job', {'_format': 'atom'}) }}" />
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('bundles/ibwjobeet/css/main.css') }}" type="text/css" media="all" />
@@ -90,7 +93,7 @@
                    </span>
             <ul>
                 <li><a href="">About Jobeet</a></li>
-                <li class="feed"><a href="">Full feed</a></li>
+                <li class="feed"><a href="{{ path('ibw_job', {'_format': 'atom'}) }}">Full feed</a></li>
                 <li><a href="">Jobeet API</a></li>
                 <li class="last"><a href="">Affiliates</a></li>
             </ul>
